// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeZone element Should add the class name into the component 1`] = `
<div
  className="my-custom-class-name"
  style={
    {
      "display": "inline-block",
    }
  }
>
  <input
    onChange={[Function]}
    placeholder=""
    style={
      {
        "boxSizing": "content-box",
        "width": "1px",
      }
    }
    value=""
  />
  <div
    style={
      {
        "height": 0,
        "left": 0,
        "overflow": "scroll",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }
  />
</div>
`;

exports[`TimeZone element Should render the component 1`] = `
<div
  className="tribe-editor__timezone-input"
  style={
    {
      "display": "inline-block",
    }
  }
>
  <input
    onChange={[Function]}
    placeholder=""
    style={
      {
        "boxSizing": "content-box",
        "width": "1px",
      }
    }
    value=""
  />
  <div
    style={
      {
        "height": 0,
        "left": 0,
        "overflow": "scroll",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }
  />
</div>
`;

exports[`TimeZone element Should render the placeholder on the input 1`] = `
<div
  className="tribe-editor__timezone-input"
  style={
    {
      "display": "inline-block",
    }
  }
>
  <input
    onChange={[Function]}
    placeholder="Love this tribe ! "
    style={
      {
        "boxSizing": "content-box",
        "width": "1px",
      }
    }
    value=""
  />
  <div
    style={
      {
        "height": 0,
        "left": 0,
        "overflow": "scroll",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }
  />
  <div
    style={
      {
        "height": 0,
        "left": 0,
        "overflow": "scroll",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }
  >
    Love this tribe ! 
  </div>
</div>
`;

exports[`TimeZone element Should render the value on the input 1`] = `
<div
  className="tribe-editor__timezone-input"
  style={
    {
      "display": "inline-block",
    }
  }
>
  <input
    onChange={[Function]}
    placeholder=""
    style={
      {
        "boxSizing": "content-box",
        "width": "1px",
      }
    }
    value="Modern Tribe"
  />
  <div
    style={
      {
        "height": 0,
        "left": 0,
        "overflow": "scroll",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
        "whiteSpace": "pre",
      }
    }
  >
    Modern Tribe
  </div>
</div>
`;
